--- a/BankAccount.Web/Pages/Index.cshtml
+++ b/BankAccount.Web/Pages/Index.cshtml
@@ -1,12 +1,42 @@
 ﻿@page
 @model IndexModel
+
 @{
     ViewData["Title"] = "Home page";
 }
 
 <div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">
-        building Web apps with ASP.NET Core
-    </a>.</p>
+    <h1 class="display-4">Compte en banque</h1>
+    <table class="table">
+        <thead>
+        <tr>
+            <th>Date</th>
+            <th>Crédit</th>
+            <th>Débit</th>
+            <th>Solde après opération</th>
+        </tr>
+        </thead>
+        <tbody>
+        @foreach(var ligne in Model.LignesCompte)
+        {
+            <tr>
+                <td>
+                    @ligne.Date
+                </td>
+                <td>
+                    @ligne.Crédit
+                </td>
+                <td>
+                    @ligne.Débit
+                </td>
+                <td>
+                    @ligne.SoldeAprèsOpération
+                </td>
+            </tr>
+        }
+        </tbody>
+        <tfoot>
+            <tr><td colspan="4">Balance : @Model.BalanceFinale</td></tr>
+        </tfoot>
+    </table>
 </div>
